--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Download APK from build
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
-          pattern: demo*
+          name: demoapk
       - name: preinstall
         run: pip3 install -r requirements.txt
       - name: test
-        run: ./extract_jni.py demo.apk
+        run: ./extract_jni.py demoapk/app-debug.apk
 
   release:
     name: release APK
@@ -47,9 +47,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download APK from build
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
-          pattern: demo*
+          name: demoapk
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
