--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       - name: preinstall
         run: pip3 install -r requirements.txt
       - name: test
-        run: ./extract_jni.py demoapk/app-debug.apk
+        run: ./extract_jni.py demoapk
 
   release:
     name: release APK
