--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,7 @@ jobs:
       - name: preinstall
         run: pip3 install -r requirements.txt
       - name: test
-        run: ./extract_jni.py demoapk
-
+        run: ./extract_jni.py app-debug.apk
   release:
     name: release APK
     needs: build_apk
